remove lib from exludes, fix all remaining typos

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,11 @@ repos:
     hooks:
     -   id: codespell
         #args: [-w]
-        exclude: ^(locale/|lib/)
+        exclude: |
+          (?x)^(
+            locale/|
+            lib/
+          )
 -   repo: local
     hooks:
     -   id: translations
