samd/WLAN: Adapt the SAMD port files to support NINA base WLAN.
Including changes to the make and configuration files, and
changes to main.c and adding mbedtls config files.

The code area for samd51x20 devices is increased to 512k.

Signed-off-by: robert-hh <robert@hammelrath.com>

--- a/ports/samd/Makefile
+++ b/ports/samd/Makefile
@@ -65,7 +65,7 @@ CFLAGS += $(INC) -Wall -Werror -std=c99 -nostdlib -mthumb $(CFLAGS_MCU) -fsingle
 CFLAGS += -DMCU_$(MCU_SERIES) -D__$(CMSIS_MCU)__
 CFLAGS += $(CFLAGS_EXTRA)
 
-CFLAGS += -DMICROPY_HW_CODESIZE=$(MICROPY_HW_CODESIZE)
+CFLAGS += -DMICROPY_HW_CODESIZE=$(strip $(subst K,' ', $(MICROPY_HW_CODESIZE)))
 
 LDFLAGS += -nostdlib $(addprefix -T,$(LD_FILES)) -Map=$@.map --cref
 LDFLAGS += --defsym=_codesize=$(MICROPY_HW_CODESIZE)
@@ -193,6 +193,9 @@ OBJ += $(addprefix $(BUILD)/, $(ASF4_SRC_C:.c=.o))
 OBJ += $(addprefix $(BUILD)/, $(LIBM_SRC_C:.c=.o))
 OBJ += $(addprefix $(BUILD)/, $(DRIVERS_SRC_C:.c=.o))
 OBJ += $(addprefix $(BUILD)/, $(TINYUSB_SRC_C:.c=.o))
+
+query-variants:
+	$(ECHO) "VARIANTS:" $(BOARD_VARIANTS)
 
 all: $(BUILD)/firmware.uf2
 
