synthio: Add adafruit_wave and use it in the manual test

--- a/.gitmodules
+++ b/.gitmodules
@@ -338,3 +338,6 @@
 [submodule "frozen/circuitpython-pcf85063a"]
 	path = frozen/circuitpython-pcf85063a
 	url = https://github.com/bablokb/circuitpython-pcf85063a
+[submodule "frozen/Adafruit_CircuitPython_Wave"]
+	path = frozen/Adafruit_CircuitPython_Wave
+	url = http://github.com/adafruit/Adafruit_CircuitPython_Wave.git
