--- a/ports/esp32/main/CMakeLists.txt
+++ b/ports/esp32/main/CMakeLists.txt
@@ -235,14 +235,16 @@ if(EXISTS ${PROJECT_DIR}/ulp_riscv/main.c)
     ulp_embed_binary(${ulp_app_name} "${ulp_sources}" "${ulp_exp_dep_srcs}")
 endif()
 
+# Generate ULP variable constants
 if(EXISTS ${PROJECT_DIR}/ulp_riscv/main.c)
     add_custom_command(
       OUTPUT ${PROJECT_DIR}/build/esp32_ulpconst_qstr.h
-      COMMAND python ../../../make-esp32ulpconst.py ../../esp-idf/main/ulp_main/ulp_main.ld
+      COMMAND python ${PROJECT_DIR}/make-esp32ulpconst.py ../../esp-idf/main/ulp_main/ulp_main.ld
       DEPENDS ${PROJECT_DIR}/build/esp-idf/main/ulp_main/ulp_main.ld
       COMMENT "Parsing ULP headers"
       VERBATIM
       )
 
     add_library(ULP_CONST INTERFACE ${PROJECT_DIR}/build/esp32_ulpconst_qstr.h)
+
 endif()
