--- a/.gitmodules
+++ b/.gitmodules
@@ -58,5 +58,4 @@
 	url = https://github.com/micropython/micropython-lib.git
 [submodule "usermod/st7789_mpy"]
 	path = usermod/st7789_mpy
-	url = https://github.com/CircuitMess/st7789_mpy
-	branch=master-CM
+	url = https://github.com/CircuitMess/st7789_mpy.git
