fetch-port-submodules; fetch-all-submodules

--- a/ports/cxd56/Makefile
+++ b/ports/cxd56/Makefile
@@ -183,9 +183,13 @@ $(BUILD)/firmware.elf: $(BUILD)/libmpy.a
 $(MKSPK):
 	$(MAKE) -C mkspk
 
+ifeq ($(VALID_BOARD),)
+$(BUILD)/firmware.spk: invalid-board
+else
 $(BUILD)/firmware.spk: $(BUILD)/firmware.elf $(MKSPK)
 	$(ECHO) "Creating $@"
 	$(MKSPK) -c 2 $(BUILD)/firmware.elf nuttx $(BUILD)/firmware.spk
+endif
 
 flash: $(BUILD)/firmware.spk
 	$(ECHO) "Writing $< to the board"
