--- a/ports/silabs/Makefile
+++ b/ports/silabs/Makefile
@@ -137,9 +137,13 @@ MCU_SECTIONS = $^ $@
 # Default goal
 all: $(OUTPUT_DIR)/firmware.bin
 
+ifeq ($(VALID_BOARD),)
+$(BUILD)/firmware.bin: invalid-board
+else
 $(OUTPUT_DIR)/firmware.bin: $(SILABS_BUILD)/$(PROJECTNAME).Makefile $(OUTPUT_DIR)/firmware.hex
 	+@$(MAKE) --no-print-directory $(OUTPUT_DIR)/firmware.out
 	@echo 'Done.'
+endif
 
 $(SILABS_BUILD)/$(PROJECTNAME).Makefile:
 	+@$(MAKE) --no-print-directory slc-generate
