mpy-cross: Split mpconfigport.h into common and target-specific.
This is step 1 of adding a WASM target to mpy-cross. Splits the config
between mpy-cross specific (i.e. compiler configuration) and target
specific (i.e. type config).

This work was funded through GitHub Sponsors.

Signed-off-by: Jim Mussared <jim.mussared@gmail.com>

--- a/mpy-cross/Makefile
+++ b/mpy-cross/Makefile
@@ -1,3 +1,5 @@
+# This makefile builds the native executable target of the mpy-cross cross-compiler.
+
 include ../py/mkenv.mk
 
 # define main target
