Move unix specific build rules

--- a/ports/unix/Makefile
+++ b/ports/unix/Makefile
@@ -193,6 +193,46 @@ ifeq ($(MICROPY_PY_JNI),1)
 CFLAGS += -I/usr/lib/jvm/java-7-openjdk-amd64/include -DMICROPY_PY_JNI=1
 endif
 
+################################################################################
+# LVGL unix optional libraries
+# Update CFLAGS_EXTMOD and LDFLAGS_EXTMOD for LVGL extenral library,
+# but do that only on the unix port, for unix specific dependencies
+
+ifneq ($(UNAME_S),Darwin)
+CFLAGS_EXTMOD += -DMICROPY_FB=1
+endif
+
+SDL_CFLAGS_EXTMOD :=  $(shell pkg-config --silence-errors --cflags sdl2)
+SDL_LDFLAGS_EXTMOD := $(shell pkg-config --silence-errors --libs   sdl2)
+ifneq ($(SDL_LDFLAGS_EXTMOD),)
+CFLAGS_EXTMOD += $(SDL_CFLAGS_EXTMOD) -DMICROPY_SDL=1
+LDFLAGS_EXTMOD += $(SDL_LDFLAGS_EXTMOD)
+endif
+
+RLOTTIE_CFLAGS_EXTMOD :=  $(shell pkg-config --silence-errors --cflags rlottie)
+RLOTTIE_LDFLAGS_EXTMOD := $(shell pkg-config --silence-errors --libs   rlottie)
+ifneq ($(RLOTTIE_LDFLAGS_EXTMOD),)
+CFLAGS_EXTMOD += $(RLOTTIE_CFLAGS_EXTMOD) -DMICROPY_RLOTTIE=1
+LDFLAGS_EXTMOD += $(RLOTTIE_LDFLAGS_EXTMOD)
+endif
+
+FREETYPE_CFLAGS_EXTMOD :=  $(shell pkg-config --silence-errors --cflags freetype2)
+FREETYPE_LDFLAGS_EXTMOD := $(shell pkg-config --silence-errors --libs   freetype2)
+ifneq ($(FREETYPE_LDFLAGS_EXTMOD),)
+CFLAGS_EXTMOD += $(FREETYPE_CFLAGS_EXTMOD) -DMICROPY_FREETYPE=1
+LDFLAGS_EXTMOD += $(FREETYPE_LDFLAGS_EXTMOD)
+endif
+
+FFMPEG_LIBS := libavformat libavcodec libswscale libavutil
+FFMPEG_CFLAGS_EXTMOD :=  $(shell pkg-config --silence-errors --cflags $(FFMPEG_LIBS))
+FFMPEG_LDFLAGS_EXTMOD := $(shell pkg-config --silence-errors --libs   $(FFMPEG_LIBS))
+ifneq ($(FFMPEG_LDFLAGS_EXTMOD),)
+CFLAGS_EXTMOD += $(FFMPEG_CFLAGS_EXTMOD) -DMICROPY_FFMPEG=1
+LDFLAGS_EXTMOD += $(FFMPEG_LDFLAGS_EXTMOD)
+endif
+
+################################################################################
+
 # source files
 SRC_C += \
 	main.c \
