--- a/ports/stm32/Makefile
+++ b/ports/stm32/Makefile
@@ -38,7 +38,7 @@ FROZEN_MANIFEST ?= boards/manifest.py
 MBOOT_TEXT0_ADDR ?= 0x08000000
 
 # Disable TINY TTF, since build fails on stm32
-CFLAGS_MOD += -DLV_USE_TINY_TTF=0
+CFLAGS_EXTMOD += -DLV_USE_TINY_TTF=0
 
 # include py core make definitions
 include $(TOP)/py/py.mk
