--- a/ports/windows/msvc/sources.props
+++ b/ports/windows/msvc/sources.props
@@ -10,6 +10,7 @@
     <PyExtModSource Include="$(PyBaseDir)extmod\modasyncio.c" />
     <PyExtModSource Include="$(PyBaseDir)extmod\modbinascii.c" />
     <PyExtModSource Include="$(PyBaseDir)extmod\moductypes.c" />
+    <PyExtModSource Include="$(PyBaseDir)extmod\moddeflate.c" />
     <PyExtModSource Include="$(PyBaseDir)extmod\modhashlib.c" />
     <PyExtModSource Include="$(PyBaseDir)extmod\modheapq.c" />
     <PyExtModSource Include="$(PyBaseDir)extmod\modjson.c" />
