samd/mpconfigport: Enable DHT and onewire drivers on all MCUs/boards.
And move the setting to the samd-generic files, now that both samd21
and samd51 support it.

Signed-off-by: robert-hh <robert@hammelrath.com>

--- a/ports/samd/Makefile
+++ b/ports/samd/Makefile
@@ -119,6 +119,7 @@ SRC_C += \
 	tusb_port.c \
 
 SHARED_SRC_C += \
+	drivers/dht/dht.c \
 	shared/runtime/mpirq.c \
 	shared/libc/printf.c \
 	shared/libc/string0.c \
