ports/esp32: Add modesp32s3.
Signed-off-by: fvstory <fv1016898007@qq.com>

--- a/ports/esp32/main_esp32s3/CMakeLists.txt
+++ b/ports/esp32/main_esp32s3/CMakeLists.txt
@@ -8,4 +8,12 @@ if(NOT MICROPY_PORT_DIR)
     get_filename_component(MICROPY_PORT_DIR ${MICROPY_DIR}/ports/esp32 ABSOLUTE)
 endif()
 
+list(APPEND MICROPY_SOURCE_PORT
+    modesp32s3.c
+)
+
+list(APPEND IDF_COMPONENTS
+    esp_lcd
+)
+
 include(${MICROPY_PORT_DIR}/esp32_common.cmake)
