--- a/ports/rp2/Makefile
+++ b/ports/rp2/Makefile
@@ -16,8 +16,14 @@ endif
 ifeq ($(wildcard $(BOARD_DIR)/.),)
 $(error Invalid BOARD specified: $(BOARD_DIR))
 endif
- 
+
+# If the build directory is not given, make it reflect the board name (and
+# optionally the board variant).
+ifneq ($(BOARD_VARIANT),)
+BUILD ?= build-$(BOARD)-$(BOARD_VARIANT)
+else
 BUILD ?= build-$(BOARD)
+endif
 
 $(VERBOSE)MAKESILENT = -s
 
