esp8266: Add board variant support.
This merges the existing GENERIC, GENERIC_1M, and GENERIC_512k boards
into variants of the new ESP8266_GENERIC board (renamed from GENERIC so
as not to clash with other ports).

Also moves the generation of the "OTA" variant (previously generated by
autobuild/build-esp8266-latest.sh) into the variant.

Following the convention established for the WEACTSTUDIO rp2 board, the
names of the variants are FLASH_1M and FLASH_512K (but rename the .ld files
to use MiB and kiB).

Updates autobuild to build esp8266 firmware the same way as other ports.
This requires renaming the output from firmware-combined.bin to just
firmware.bin.

This work was funded through GitHub Sponsors.

Signed-off-by: Jim Mussared <jim.mussared@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,4 +48,4 @@ max-complexity = 40
 
 # manifest.py files are evaluated with some global names pre-defined
 "**/manifest.py" = ["F821"]
-"ports/**/boards/manifest*.py" = ["F821"]
+"ports/**/boards/**/manifest_*.py" = ["F821"]
