rp2: Rename PICO, PICO_W to RPI_PICO, RPI_PICO_W.
PICO might not always be a unique name across all ports, and the
convention generally for other boards is to do VENDOR_BOARD.

This work was funded through GitHub Sponsors.

Signed-off-by: Jim Mussared <jim.mussared@gmail.com>

--- a/ports/rp2/Makefile
+++ b/ports/rp2/Makefile
@@ -8,12 +8,15 @@ ifdef BOARD_DIR
 # the path as the board name.
 BOARD ?= $(notdir $(BOARD_DIR:/=))
 else
-# If not given on the command line, then default to PICO.
-BOARD ?= PICO
+# If not given on the command line, then default to RPI_PICO.
+BOARD ?= RPI_PICO
 BOARD_DIR ?= boards/$(BOARD)
 endif
 
 ifeq ($(wildcard $(BOARD_DIR)/.),)
+ifeq ($(findstring boards/PICO,$(BOARD_DIR)),boards/PICO)
+$(warning The PICO* boards have been renamed to RPI_PICO*)
+endif
 $(error Invalid BOARD specified: $(BOARD_DIR))
 endif
 
