Split out flash and psram settings from sdkconfig

--- a/ports/espressif/CMakeLists.txt
+++ b/ports/espressif/CMakeLists.txt
@@ -5,10 +5,8 @@ cmake_minimum_required(VERSION 3.16)
 set(ENV{IDF_PATH} ${CMAKE_SOURCE_DIR}/esp-idf)
 
 # The component list here determines what options we get in menuconfig and what the ninja file can build.
-set(COMPONENTS bt driver esp-tls esp_adc_cal esp_event esp_netif esp_psram esp_wifi esptool_py freertos log lwip main mbedtls mdns soc ulp usb wpa_supplicant esp_lcd)
-set(EXTRA_COMPONENT_DIRS "esp-protocols/components/mdns")
-
-list(APPEND EXTRA_COMPONENT_DIRS "esp32-camera")
+set(COMPONENTS bt driver esp-tls esp_adc_cal esp_event esp_netif esp_psram esp_wifi esptool_py freertos log lwip main mbedtls mdns soc ulp usb wpa_supplicant esp32-camera esp_lcd)
+set(EXTRA_COMPONENT_DIRS "esp-protocols/components/mdns" "esp32-camera")
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(circuitpython)
